--- a/Member-Password.html
+++ b/Member-Password.html
@@ -414,12 +414,15 @@
         <script>
             // Public
             var _phone_key
+
             function setCookie(_sess) {
                 sessionStorage.session = _sess;
             }
+
             function clearCookie() {
                 sessionStorage.session = '';
             }
+
             function checkPhone(namber) {
                 var phone = namber
                 if (!(/^1[34578]\d{9}$/.test(phone))) {
@@ -430,6 +433,7 @@
                     _phone_key = true;
                 }
             }
+
             function userInformation() {
                 $.ajax({
                     url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
@@ -560,8 +564,8 @@
                         url: "http://ldyllive.com/api/Api/setUserPassword?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
-                            passwd: _passwd,
-                            oldpasswd: _new_passwd
+                            passwd: _new_passwd,
+                            oldpasswd: _passwd
                         }),
                         success: function (data) {
                             var _key = data.body.isSet;
@@ -609,13 +613,16 @@
                 var _passwd = $('.jq-user-cashpassword').find('[name=cashpasswd]').val();
                 var _new_passwd = $('.jq-user-cashpassword').find('[name=new-cashpasswd]').val();
                 var _check_passwd = $('.jq-user-cashpassword').find('[name=new-cashpasswd-check]').val();
+                console.log(_passwd);
+                console.log(_new_passwd);
+                console.log(_check_passwd);
                 if (_new_passwd == _check_passwd) {
                     $.ajax({
                         url: "http://ldyllive.com/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
-                            passwd: _passwd,
-                            oldpasswd: _new_passwd
+                            passwd: _new_passwd,
+                            oldpasswd: _passwd
                         }),
                         success: function (data) {
                             var _key = data.body.isSet;
@@ -633,7 +640,6 @@
                     alert('密码输入不一致，请重新输入');
                 }
             });
-
         </script>
     </div>
 </body>
