--- a/Member-Discount.html
+++ b/Member-Discount.html
@@ -345,12 +345,15 @@
         <script>
             // Public
             var _phone_key
+
             function setCookie(_sess) {
                 sessionStorage.session = _sess;
             }
+
             function clearCookie() {
                 sessionStorage.session = '';
             }
+
             function checkPhone(namber) {
                 var phone = namber
                 if (!(/^1[34578]\d{9}$/.test(phone))) {
@@ -361,6 +364,7 @@
                     _phone_key = true;
                 }
             }
+
             function userInformation() {
                 $.ajax({
                     url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
@@ -474,21 +478,25 @@
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="row">' +
-                                                '<div class="discount-group jq-notice-group">' +
-                                                    '<div class="img-container">' +
-                                                            '<img class="absolute-center-xs img" src="images/announcemet/' + data.body.list[i].an_image + '" alt="">' +
-                                                    '</div>' +
-                                                    '<p class="title">' +
-                                                        '<i class="icon-ic-broadcast1"></i>' +
-                                                        '<span style="display: inline-block; margin-right: 20px;">' + data.body.list[i].an_title + '</span>' +
-                                                        '<span>' + data.body.list[i].an_datetime + '</span>' +
-                                                    '</p>' +
-                                                    '<p class="detail jq-detail">' + data.body.list[i].an_content + '</p>' +
-                                                    '<div class="discount-action">' +
-                                                        '<a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>' +
-                                                    '</div>' +
-                                                '</div>' +
-                                            '</div>' 
+                                            '<div class="discount-group jq-notice-group">' +
+                                            '<div class="img-container">' +
+                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
+                                            data.body.list[i].an_image + '" alt="">' +
+                                            '</div>' +
+                                            '<p class="title">' +
+                                            '<i class="icon-ic-broadcast1"></i>' +
+                                            '<span style="display: inline-block; margin-right: 20px;">' +
+                                            data.body.list[i].an_title + '</span>' +
+                                            '<span>' + data.body.list[i].an_datetime +
+                                            '</span>' +
+                                            '</p>' +
+                                            '<p class="detail jq-detail">' + data.body.list[i].an_content +
+                                            '</p>' +
+                                            '<div class="discount-action">' +
+                                            '<a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>'
                                         )
                                     }
                                     break;
