--- a/Member-Message.html
+++ b/Member-Message.html
@@ -140,55 +140,14 @@
                                 <input class="btn btn-bg-blue jq-btn-message jq-cancelBubble" type="button" value="新增站内信">
                             </div>
                             <div class="row" style="border-bottom: none;">
-                                <div class="member-table">
+                                <div class="member-table jq-member-table">
                                     <div class="thead">
                                         <div class="tr">
                                             <div class="th">主题</div>
                                             <div class="th">操作</div>
                                         </div>
                                     </div>
-                                    <div class="tbody">
-                                        <div class="tr">
-                                            <div class="td" data-title="主题">
-                                                <a href="javascript:void(0)" class="jq-btn-message-view" style="text-decoration: underline;">主題標題</a>
-                                            </div>
-                                            <div class="td td-action" data-title="操作">
-                                                <a href="javascript:void(0)" class="jq-btn-message-delete" style="border-right: 0; padding-right: 0; margin-right: 0;">删除</a>
-                                            </div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="主题">
-                                                <a href="javascript:void(0)" class="jq-btn-message-view" style="text-decoration: underline;">主題標題</a>
-                                            </div>
-                                            <div class="td td-action" data-title="操作">
-                                                <a href="javascript:void(0)" class="jq-btn-message-delete" style="border-right: 0; padding-right: 0; margin-right: 0;">删除</a>
-                                            </div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="主题">
-                                                <a href="javascript:void(0)" class="jq-btn-message-view" style="text-decoration: underline;">主題標題</a>
-                                            </div>
-                                            <div class="td td-action" data-title="操作">
-                                                <a href="javascript:void(0)" class="jq-btn-message-delete" style="border-right: 0; padding-right: 0; margin-right: 0;">删除</a>
-                                            </div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="主题">
-                                                <a href="javascript:void(0)" class="jq-btn-message-view" style="text-decoration: underline;">主題標題</a>
-                                            </div>
-                                            <div class="td td-action" data-title="操作">
-                                                <a href="javascript:void(0)" class="jq-btn-message-delete" style="border-right: 0; padding-right: 0; margin-right: 0;">删除</a>
-                                            </div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="主题">
-                                                <a href="javascript:void(0)" class="jq-btn-message-view" style="text-decoration: underline;">主題標題</a>
-                                            </div>
-                                            <div class="td td-action" data-title="操作">
-                                                <a href="javascript:void(0)" class="jq-btn-message-delete" style="border-right: 0; padding-right: 0; margin-right: 0;">删除</a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="tbody"></div>
                                 </div>
                             </div>
                         </div>
@@ -311,45 +270,33 @@
                 <form class="form-group">
                     <div class="row">
                         <p class="title">类型</p>
-                        <select class="select" name="" id="">
-                            <option value="">上級</option>
-                            <option value="">所有直接下級</option>
-                            <option value="">指定直接下級</option>
+                        <select class="select" name="message-type" id="">
+                            <option value="up">上級</option>
+                            <option value="all-down">所有直接下級</option>
+                            <option value="down">指定直接下級</option>
                         </select>
                     </div>
                     <div class="row">
                         <p class="title">收件人</p>
-                        <input class="input" type="password" name="" placeholder="请输入收件人资讯">
-                        <p class="warning-text">警示文字警示文字警示文字</p>
+                        <input class="input" type="text" name="message-name" placeholder="请输入收件人资讯">
+                    </div>
+                    <div class="row">
+                        <p class="title">标题</p>
+                        <input class="input" type="text" name="message-title" placeholder="请输入标题名称">
                     </div>
                     <div class="row">
                         <p class="title">讯息</p>
-                        <textarea class="textarea" name="" cols="30" rows="6"></textarea>
+                        <textarea class="textarea" name="message-content" cols="30" rows="6"></textarea>
                     </div>
                     <div class="form-action">
-                        <input class="btn btn-bg-blue" type="button" value="确认发送">
+                        <input class="btn btn-bg-blue ajax-btn-message-submit" type="button" value="确认发送">
                     </div>
                 </form>
             </div>
             <div class="pop-message-view jq-pop-message-view jq-cancelBubble absolute-center-xs">
                 <div class="pop-close jq-pop-close"></div>
                 <p class="title">站内信標題</p>
-                <form class="form-group">
-                    <div class="row">
-                        <p class="title">寄件人</p>
-                        <p class="detail">寄件人名称</p>
-                    </div>
-                    <div class="row">
-                        <p class="title">讯息</p>
-                        <p class="detail">
-                            信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容
-                            信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容
-                            信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容
-                            信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容 信件内容信件内容信件内容信件内容信件内容信件内容
-                            信件内容信件内容信件内容信件内容信件内容信件内容
-                        </p>
-                    </div>
-                </form>
+                <form class="form-group"></form>
             </div>
             <div class="pop-bankcard jq-pop-bankcard jq-cancelBubble absolute-center-xs">
                 <div class="pop-close jq-pop-close"></div>
@@ -398,12 +345,15 @@
         <script>
             // Public
             var _phone_key
+
             function setCookie(_sess) {
                 sessionStorage.session = _sess;
             }
+
             function clearCookie() {
                 sessionStorage.session = '';
             }
+
             function checkPhone(namber) {
                 var phone = namber
                 if (!(/^1[34578]\d{9}$/.test(phone))) {
@@ -414,6 +364,7 @@
                     _phone_key = true;
                 }
             }
+
             function userInformation() {
                 $.ajax({
                     url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
@@ -528,34 +479,25 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUserMessageList?sess=" + sessionStorage.session,
+                    url: "http://ldyllive.com/api/Api/getUserMessageList?sess=" + sessionStorage.session +
+                        "&p=1$limit=5",
                     type: "GET",
                     success: function (data) {
-                        var _each = $(".jq-sect-discount").find('.container');
+                        var _each = $(".jq-member-table").find('.tbody');
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
                                 case 100:
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
-                                            '<div class="row">' +
-                                            '<div class="discount-group jq-notice-group">' +
-                                            '<div class="img-container">' +
-                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
-                                            data.body.list[i].an_image + '" alt="">' +
+                                            '<div class="tr">' +
+                                            '<div class="td" data-title="主题">' +
+                                            '<a href="javascript:void(0)" class="jq-btn-message-view" style="text-decoration: underline;" data-um-id="' +
+                                            data.body.list[i].um_id + '">' + data.body.list[i].um_title +
+                                            '</a>' +
                                             '</div>' +
-                                            '<p class="title">' +
-                                            '<i class="icon-ic-broadcast1"></i>' +
-                                            '<span style="display: inline-block; margin-right: 20px;">' +
-                                            data.body.list[i].an_title + '</span>' +
-                                            '<span>' + data.body.list[i].an_datetime +
-                                            '</span>' +
-                                            '</p>' +
-                                            '<p class="detail jq-detail">' + data.body.list[i].an_content +
-                                            '</p>' +
-                                            '<div class="discount-action">' +
-                                            '<a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>' +
-                                            '</div>' +
+                                            '<div class="td td-action" data-title="操作">' +
+                                            '<a href="javascript:void(0)" class="jq-btn-message-delete" style="border-right: 0; padding-right: 0; margin-right: 0;">删除</a>' +
                                             '</div>' +
                                             '</div>'
                                         )
@@ -566,7 +508,109 @@
                     }
                 });
             });
-
+            $(document).on('click', '.jq-btn-message-view', function () {
+                var key = $(this).attr('data-um-id');
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getUserMessage?sess=" + sessionStorage.session,
+                    type: "POST",
+                    data: JSON.stringify({
+                        um_id: key,
+                    }),
+                    success: function (data) {
+                        var _each = $(".jq-pop-message-view").find('.form-group');
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    _each.append(
+                                        '<div class="row">' +
+                                        '<p class="title">寄件人</p>' +
+                                        '<p class="detail">' + data.body.row.u_account + '</p>' +
+                                        '</div>' +
+                                        '<div class="row">' +
+                                        '<p class="title">讯息</p>' +
+                                        '<p class="detail">' + data.body.row.um_content +
+                                        '</p>' +
+                                        '</div>'
+                                    )
+                                    break;
+                            }
+                        }
+                    }
+                });
+            })
+            $('.ajax-btn-message-submit').click(function () {
+                var _message_type = $('[name=message-type]').val();
+                var _message_name = $('[name=message-name]').val();
+                var _message_title = $('[name=message-title]').val();
+                var _message_content = $('[name=message-content]').val();
+                if (_message_type == 'up') {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/sendSuperiorUserMessage?sess=" +
+                            sessionStorage.session,
+                        type: "POST",
+                        data: JSON.stringify({
+                            title: _message_title,
+                            content: _message_content
+                        }),
+                        success: function (data) {
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        alert('发送成功');
+                                        break;
+                                    case '999':
+                                        alert(data.message);
+                                }
+                            }
+                        }
+                    });
+                } else if (_message_type == 'all-down') {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/sendSubordinateUserMessage?sess=" +
+                            sessionStorage.session,
+                        type: "POST",
+                        data: JSON.stringify({
+                            send_all_subordinate: 1,
+                            title: _message_title,
+                            content: _message_content
+                        }),
+                        success: function (data) {
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        alert('发送成功');
+                                        break;
+                                    case '999':
+                                        alert(data.message);
+                                }
+                            }
+                        }
+                    });
+                } else if (_message_type == 'down') {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/sendSubordinateUserMessage?sess=" +
+                            sessionStorage.session,
+                        type: "POST",
+                        data: JSON.stringify({
+                            account: _message_name,
+                            send_all_subordinate: 0,
+                            title: _message_title,
+                            content: _message_content
+                        }),
+                        success: function (data) {
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        alert('发送成功');
+                                        break;
+                                    case '999':
+                                        alert(data.message);
+                                }
+                            }
+                        }
+                    });
+                }
+            })
         </script>
     </div>
 </body>
