--- a/Member-Message.html
+++ b/Member-Message.html
@@ -110,6 +110,9 @@
                             <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
                         </li>
                         <li>
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+                        </li>
+                        <li>
                             <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
                         </li>
                         <li>
@@ -126,6 +129,9 @@
                         </li>
                         <li>
                             <a href="Member-Message.html" class="btn btn-solid-blue active">站内讯息</a>
+                        </li>
+                        <li>
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
                         </li>
                         <li>
                             <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
@@ -220,26 +226,27 @@
                 <form class="form-group">
                     <div class="row">
                         <i class="icon-ic-user3"></i>
-                        <input class="input" type="text" name="" placeholder="请输入姓名...">
-                        <p class="warning-text">警示文字警示文字警示文字</p>
+                        <input class="input" type="text" name="username" placeholder="请输入姓名...">
+                    </div>
+                    <div class="row">
+                        <i class="icon-key"></i>
+                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
                     </div>
                     <div class="row">
                         <i class="icon-ic-user3"></i>
-                        <input class="input" type="text" name="" placeholder="帐号必须由4-9位数字或小写英文字母组合">
-                        <p class="warning-text">警示文字警示文字警示文字</p>
+                        <input class="input" type="text" name="account" placeholder="帐号必须由4-9位数字或小写英文字母组合">
                     </div>
                     <div class="row">
                         <i class="icon-ic-lock1"></i>
-                        <input class="input" type="password" name="" placeholder="密码必须由8至10个字符之间">
-                        <p class="warning-text">警示文字警示文字警示文字</p>
+                        <input class="input" type="password" name="password" placeholder="密码必须由8至10个字符之间">
                     </div>
                     <div class="row">
                         <i class="icon-ic-shield"></i>
-                        <input class="input" type="text" name="" placeholder="请输入验证码">
-                        <p class="warning-text">警示文字警示文字警示文字</p>
+                        <input class="input" type="text" name="captcha" placeholder="请输入验证码">
+                        <div class="captcha-container jq-captcha-container"></div>
                     </div>
                     <div class="form-action">
-                        <input class="btn btn-bg-blue" type="button" value="注册">
+                        <input class="btn btn-bg-blue ajax-btn-register" type="button" value="注册">
                         <input type="checkbox" name="" checked>
                         <span>我已经阅读并同意乐鼎國際</span>
                         <a href="">《客户协议》</a>
@@ -345,15 +352,12 @@
         <script>
             // Public
             var _phone_key
-
             function setCookie(_sess) {
                 sessionStorage.session = _sess;
             }
-
             function clearCookie() {
                 sessionStorage.session = '';
             }
-
             function checkPhone(namber) {
                 var phone = namber
                 if (!(/^1[34578]\d{9}$/.test(phone))) {
@@ -364,7 +368,6 @@
                     _phone_key = true;
                 }
             }
-
             function userInformation() {
                 $.ajax({
                     url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
@@ -430,7 +433,8 @@
                                     alert('登出成功');
                                     $('.jq-login-before').show();
                                     $('.jq-login-after').hide();
-                                    $('.jq-member-nam').empty()
+                                    $('.jq-member-nam').empty();
+                                    window.location.href = 'http://ldyllive.com/Home-Index.html';
                                     break;
                             }
                         }
@@ -461,6 +465,54 @@
                         }
                     });
                 }
+            });
+            $('.jq-btn-pop-register').click(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getCaptcha",
+                    type: "GET",
+                    success: function (data) {
+                        $(".jq-pop-register").find('.jq-captcha-container').find('img').remove();
+                        var _each = $(".jq-pop-register").find('.jq-captcha-container');
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    _each.append(
+                                        data.body.image
+                                    )
+                                    break;
+                            }
+                        }
+                    }
+                });
+            });
+            $('.ajax-btn-register').click(function () {
+                var _username = $('.jq-pop-register').find('[name=username]').val();
+                var _invitecode = $('.jq-pop-register').find('[name=invitecode]').val();
+                var _account = $('.jq-pop-register').find('[name=account]').val();
+                var _password = $('.jq-pop-register').find('[name=password]').val();
+                var _captcha = $('.jq-pop-register').find('[name=captcha]').val();
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/registered" + _invitecode,
+                    type: "POST",
+                    data: JSON.stringify({
+                        name: _username,
+                        account: _account,
+                        passwd: _password,
+                        captcha: _captcha
+                    }),
+                    success: function (data) {
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    alert(data.message);
+                                    window.location.reload();
+                                    break;
+                                case '999':
+                                    alert('帐号或密码错误');
+                            }
+                        }
+                    }
+                });
             });
 
             // Privity
