--- a/Member-Register.html
+++ b/Member-Register.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="font/style.css">
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
 
     <!--iphone+ 736(560)-->
     <!--iphone 667(555)-->
@@ -114,7 +113,7 @@
                             <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
                         </li>
                         <li>
-                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue active">日常纪录</a>
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
                         </li>
                         <li>
                             <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
@@ -132,7 +131,7 @@
                             <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
                         </li>
                         <li>
-                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+                            <a href="Member-Register.html" class="btn btn-solid-blue active">邀请码管理</a>
                         </li>
                         <li>
                             <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
@@ -143,76 +142,14 @@
                     </ul>
                     <div class="member-detail">
                         <div class="container" action="">
+                            <div class="row btn-action" style="text-align: left;">
+                                <input class="btn btn-bg-blue jq-btn-addregister jq-cancelBubble" type="button" value="新增邀请码">
+                            </div>
                             <div class="row" style="border-bottom: none;">
-                                <div class="member-table-action">
-                                    <div class="option-group-container clear">
-                                        <p class="title">纪录类型</p>
-                                        <a href="javascript:void(0)" class="option jq-member-option active" data-daily-option="1.2">充值</a>
-                                        <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="3">提款</a>
-                                        <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="6">优惠</a>
-                                        <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="4.5">转帐</a>
-                                    </div>
-                                    <div class="date-group-container jq-date-group-container clear">
-                                        <p class="title">时间区间</p>
-                                        <div class="inner">
-                                            <input type="text" id="from" name="from" placeholder="起始时间">
-                                            <label for="to">至</label>
-                                            <input type="text" id="to" name="to" placeholder="结束时间">
-                                            <a class="btn btn-bg-blue ajax-btn-daily-time" href="javascript:void(0)">
-                                                <i class="icon-ic-search"></i>
-                                                <span>搜寻</span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--充值-->
-                                <div class="member-table" data-daily-table="1">
+                                <div class="member-table jq-member-table">
                                     <div class="thead">
                                         <div class="tr">
-                                            <div class="th">充值时间</div>
-                                            <div class="th">充值金额</div>
-                                            <div class="th">充值方式</div>
-                                            <div class="th">状态</div>
-                                            <div class="th">操作</div>
-                                        </div>
-                                    </div>
-                                    <div class="tbody"></div>
-                                </div>
-                                <!--提款-->
-                                <div class="member-table" data-daily-table="2" style="display: none;">
-                                    <div class="thead">
-                                        <div class="tr">
-                                            <div class="th">提款日期</div>
-                                            <div class="th">提款金额</div>
-                                            <div class="th">状态</div>
-                                            <div class="th">提款状态</div>
-                                            <div class="th">操作</div>
-                                        </div>
-                                    </div>
-                                    <div class="tbody"></div>
-                                </div>
-                                <!--優惠-->
-                                <div class="member-table" data-daily-table="3" style="display: none;">
-                                    <div class="thead">
-                                        <div class="tr">
-                                            <div class="th">申请时间</div>
-                                            <div class="th">优惠类型</div>
-                                            <div class="th">优惠金额</div>
-                                            <div class="th">状态</div>
-                                            <div class="th">操作</div>
-                                        </div>
-                                    </div>
-                                    <div class="tbody"></div>
-                                </div>
-                                <!--轉帳-->
-                                <div class="member-table" data-daily-table="4" style="display: none;">
-                                    <div class="thead">
-                                        <div class="tr">
-                                            <div class="th">申请时间</div>
-                                            <div class="th">转帐类型</div>
-                                            <div class="th">转帐金额</div>
-                                            <div class="th">状态</div>
-                                            <div class="th">操作</div>
+                                            <div class="th">邀请码列表</div>
                                         </div>
                                     </div>
                                     <div class="tbody"></div>
@@ -406,12 +343,10 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/script.js"></script>
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/jquery-ui/jquery-ui.min.js"></script>
         <script>
             Live.Global.intital();
             Live.Global.member();
             Live.Global.owl_banner();
-            Live.Global.datepicker();
         </script>
         <script>
             // Public
@@ -580,131 +515,12 @@
             });
 
             // Privity
-            var daily_key = 1.2;
-
-            function daily_change(_type, _start_type, _end_type) {
-                $("[data-daily-table]").find('.tbody').find('.tr').remove();
-                $.ajax({
-                    url: "http://ldyllive.com/api/Api/report?sess=" + sessionStorage.session +
-                        "&type=3&p=1&limt=5",
-                    type: "POST",
-                    data: JSON.stringify({
-                        type: _type,
-                        start_date: _start_type,
-                        end_date: _end_type,
-                    }),
-                    success: function (data) {
-                        if (_type == 1.2) {
-                            var _each = $("[data-daily-table=1]").find('.tbody');
-                            var _length = data.body.list.length;
-                            if (data.status) {
-                                switch (data.status) {
-                                    case 100:
-                                        for (i = 0; i < _length; i++) {
-                                            _each.append(
-                                                '<div class="tr">' +
-                                                '<div class="td" data-title="充值时间">' + data.body.list[i]
-                                                .ua_add_datetime + '</div>' +
-                                                '<div class="td" data-title="充值金额">' + data.body.list[i]
-                                                .ua_value + '</div>' +
-                                                '<div class="td" data-title="充值方式">' + 'none' +
-                                                '</div>' +
-                                                '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
-                                                '</div>'
-                                            )
-                                        }
-                                        break;
-                                }
-                            }
-                        } else if (_type == 3) {
-                            var _each = $("[data-daily-table=2]").find('.tbody');
-                            var _length = data.body.list.length;
-                            if (data.status) {
-                                switch (data.status) {
-                                    case 100:
-                                        for (i = 0; i < _length; i++) {
-                                            _each.append(
-                                                '<div class="tr">' +
-                                                '<div class="td" data-title="提款日期">' + data.body.list[i]
-                                                .ua_add_datetime + '</div>' +
-                                                '<div class="td" data-title="提款金额">' + data.body.list[i]
-                                                .ua_value + '</div>' +
-                                                '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="提款状态">' + 'none' +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
-                                                '</div>'
-                                            )
-                                        }
-                                        break;
-                                }
-                            }
-                        } else if (_type == 6) {
-                            var _each = $("[data-daily-table=3]").find('.tbody');
-                            var _length = data.body.list.length;
-                            if (data.status) {
-                                switch (data.status) {
-                                    case 100:
-                                        for (i = 0; i < _length; i++) {
-                                            _each.append(
-                                                '<div class="tr">' +
-                                                '<div class="td" data-title="申请时间">' + data.body.list[i]
-                                                .ua_add_datetime + '</div>' +
-                                                '<div class="td" data-title="优惠类型">' + 'none' +
-                                                '</div>' +
-                                                '<div class="td" data-title="优惠金额">' + data.body.list[i]
-                                                .ua_value + '</div>' +
-                                                '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
-                                                '</div>'
-                                            )
-                                        }
-                                        break;
-                                }
-                            }
-                        } else if (_type == 4.5) {
-                            var _each = $("[data-daily-table=4]").find('.tbody');
-                            var _length = data.body.list.length;
-                            if (data.status) {
-                                switch (data.status) {
-                                    case 100:
-                                        for (i = 0; i < _length; i++) {
-                                            _each.append(
-                                                '<div class="tr">' +
-                                                '<div class="td" data-title="申请时间">' + data.body.list[i]
-                                                .ua_add_datetime + '</div>' +
-                                                '<div class="td" data-title="转帐类型">' + 'none' +
-                                                '</div>' +
-                                                '<div class="td" data-title="转帐金额">' + data.body.list[i]
-                                                .ua_value + '</div>' +
-                                                '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
-                                                '</div>'
-                                            )
-                                        }
-                                        break;
-                                }
-                            }
-                        }
-                    }
-                });
-            }
-
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/report?sess=" + sessionStorage.session +
-                        "&type=3&p=1&limt=5",
+                    url: "http://ldyllive.com/api/Api/getRegisteredLink?sess=" + sessionStorage.session,
                     type: "POST",
-                    data: JSON.stringify({
-                        type: 1.2,
-                    }),
                     success: function (data) {
-                        var _each = $("[data-daily-table=1]").find('.tbody');
+                        var _each = $(".jq-member-table").find('.tbody');
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
@@ -712,19 +528,8 @@
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="tr">' +
-                                            '<div class="td" data-title="充值时间">' + data.body.list[
-                                                i]
-                                            .ua_add_datetime + '</div>' +
-                                            '<div class="td" data-title="充值金额">' + data.body.list[
-                                                i]
-                                            .ua_value + '</div>' +
-                                            '<div class="td" data-title="充值方式">' + 'none' +
-                                            '</div>' +
-                                            '<div class="td" data-title="状态">' + data.body.list[
-                                                i].ua_status +
-                                            '</div>' +
-                                            '<div class="td" data-title="操作">' + 'none' +
-                                            '</div>' +
+                                            '<div class="td" data-title="邀请码">' + data.body.list[
+                                                i].rl_id + '</div>' +
                                             '</div>'
                                         )
                                     }
@@ -734,15 +539,22 @@
                     }
                 });
             });
-            $('[data-daily-option]').click(function () {
-                $('.jq-date-group-container').find('[name=from]').val('');
-                $('.jq-date-group-container').find('[name=to]').val('');
-                daily_change(daily_key);
-            });
-            $('.ajax-btn-daily-time').click(function () {
-                var _start = $('.jq-date-group-container').find('[name=from]').val();
-                var _end = $('.jq-date-group-container').find('[name=to]').val();
-                daily_change(daily_key, _start, _end);
+            $('.jq-btn-addregister').click(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/addRegisteredLink?sess=" + sessionStorage.session,
+                    type: "POST",
+                    success: function (data) {
+                        console.log(data)
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    alert(data.message);
+                                    window.location.reload();
+                                    break;
+                            }
+                        }
+                    }
+                });
             });
         </script>
     </div>
